--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,11 @@
     <input type="text" name="description" placeholder="Description" required>
     <input type="text" name="solution" placeholder="Solution" required>
     <input type="text" name="tda" placeholder="TDA" required>
+    <select name="category" required>
+        <option value="" disabled selected>Veuillez choisir une option</option>
+        <option value="micen" <% if (errors[i].category === 'micen') { %>selected<% } %>>Micen</option>
+        <option value="inot" <% if (errors[i].category === 'inot') { %>selected<% } %>>Inot</option>
+    </select>
     <!-- Bouton pour soumettre le formulaire -->
     <button type="submit">Ajouter</button>
 </form>
@@ -43,7 +48,11 @@
                 <input type="text" name="description" placeholder="Description" value="<%= errors[i].description %>" required>
                 <input type="text" name="solution" placeholder="Solution" value="<%= errors[i].solution %>" required>
                 <input type="text" name="tda" placeholder="TDA" value="<%= errors[i].tda %>" required>
-                <input type="text" name="category" placeholder="TDA" value="<%= errors[i].category %>" required>
+                <select name="category" required>
+                    <option value="" disabled selected>Veuillez choisir une option</option>
+                    <option value="micen" <% if (errors[i].category === 'micen') { %>selected<% } %>>Micen</option>
+                    <option value="inot" <% if (errors[i].category === 'inot') { %>selected<% } %>>Inot</option>
+                </select>
                 <!-- Bouton pour soumettre le formulaire -->
                 <button type="submit">Valider les modifications</button>
             </form>
