--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,18 +36,19 @@
         <!-- Conteneur pour les boutons de modification et de suppression de chaque erreur -->
         <div class="button-container">
             <!-- Formulaire pour modifier une erreur existante -->
-            <form id="edit-form-<%= error.id %>" style="display: none;" action="/edit-error" method="post">
-                <label for="category">Category:</label><br>
-                <% errors.forEach(function(error) { %>
-                    <select id="category" name="category" required>
-                        <option value="">Choisit la Catégorie</option>
-                        <% error.options.forEach(function(option) { %>
-                            <option value="<%= option.value %>" <%= option.selected ? 'selected' : '' %>><%= option.text %></option>
-                        <% }) %>
-                    </select><br>
-                <% }) %>
-                <input type="submit" value="Submit">
-            </form>            
+            <% errors.forEach(function(error) { %>
+                <div class="button-container">
+                    <!-- Formulaire pour modifier une erreur existante -->
+                    <form id="edit-form-<%= error.id %>" style="display: none;" action="/edit-error" method="post">
+                        <label for="category">Category:</label><br>
+                        <select id="category" name="category" required>
+                            <!-- Options de sélection ici -->
+                        </select>
+                        <!-- Le reste du formulaire -->
+                    </form>
+                </div>
+            <% }); %>
+            
             <form id="edit-form-<%= errors[i].id %>" style="display: none;" action="/edit-error" method="post">
                 <!-- Les inputs cachés et les champs de saisie pour les détails de l'erreur -->
 
