--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <h1>LogM - Erreurs</h1>
 
 <!-- Formulaire pour ajouter une nouvelle erreur -->
-<form action="/add-error" method="post">
+<<form action="/add-error" method="post">
     <h2>Ajouter une Erreur</h2>
     <!-- Les inputs cachés permettent de transmettre des données sans afficher un champ de saisie à l'utilisateur -->
     <input type="hidden" name="id" value="<%= nextErrorId %>">
@@ -20,9 +20,18 @@
     <input type="text" name="description" placeholder="Description" required>
     <input type="text" name="solution" placeholder="Solution" required>
     <input type="text" name="tda" placeholder="TDA" required>
+    
+    <!-- Liste déroulante pour le choix de la catégorie -->
+    <select name="category" required>
+        <% categories.forEach(function(category) { %>
+            <option value="<%= category %>"><%= category %></option>
+        <% }); %>
+    </select>
+    
     <!-- Bouton pour soumettre le formulaire -->
     <button type="submit">Ajouter</button>
 </form>
+
 
 <!-- Boucle pour afficher chaque erreur de la liste des erreurs -->
 <% for(let i=0; i<errors.length; i++) { %>
@@ -36,28 +45,13 @@
         <!-- Conteneur pour les boutons de modification et de suppression de chaque erreur -->
         <div class="button-container">
             <!-- Formulaire pour modifier une erreur existante -->
-            <% errors.forEach(function(error) { %>
-                <div class="button-container">
-                    <!-- Formulaire pour modifier une erreur existante -->
-                    <form id="edit-form-<%= error.id %>" style="display: none;" action="/edit-error" method="post">
-                        <label for="category">Category:</label><br>
-                        <select id="category" name="category" required>
-                            <!-- Options de sélection ici -->
-                        </select>
-                        <!-- Le reste du formulaire -->
-                    </form>
-                </div>
-            <% }); %>
-            
             <form id="edit-form-<%= errors[i].id %>" style="display: none;" action="/edit-error" method="post">
                 <!-- Les inputs cachés et les champs de saisie pour les détails de l'erreur -->
-
                 <input type="hidden" name="id" value="<%= errors[i].id %>">
                 <input type="text" name="code" placeholder="Code" value="<%= errors[i].code %>" required>
                 <input type="text" name="description" placeholder="Description" value="<%= errors[i].description %>" required>
                 <input type="text" name="solution" placeholder="Solution" value="<%= errors[i].solution %>" required>
                 <input type="text" name="tda" placeholder="TDA" value="<%= errors[i].tda %>" required>
-
                 <!-- Bouton pour soumettre le formulaire -->
                 <button type="submit">Valider les modifications</button>
             </form>
