--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <input type="text" name="description" placeholder="Description" required>
     <input type="text" name="solution" placeholder="Solution" required>
     <input type="text" name="tda" placeholder="TDA" required>
-    <input type="text" name="Catégorie" placeholder="category" required>
+    <input type="text" name="Catégorie" placeholder="Catégorie" required>
     <!-- Bouton pour soumettre le formulaire -->
     <button type="submit">Ajouter</button>
 </form>
@@ -44,7 +44,7 @@
                 <input type="text" name="description" placeholder="Description" value="<%= errors[i].description %>" required>
                 <input type="text" name="solution" placeholder="Solution" value="<%= errors[i].solution %>" required>
                 <input type="text" name="tda" placeholder="TDA" value="<%= errors[i].tda %>" required>
-                <input type="text" name="Catégorie" placeholder="category" value="<%= errors[i].category %>" required>
+                <input type="text" name="Catégorie" placeholder="Catégorie" value="<%= errors[i].category %>" required>
                 <!-- Bouton pour soumettre le formulaire -->
                 <button type="submit">Valider les modifications</button>
             </form>
