--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
         <p><%= errors[i].description %></p>
         <p><%= errors[i].solution %></p>
         <p><%= errors[i].tda %></p>
+        <p><%= errors[i].category %></p>
         <!-- Conteneur pour les boutons de modification et de suppression de chaque erreur -->
         <div class="button-container">
             <!-- Formulaire pour modifier une erreur existante -->
@@ -42,6 +43,17 @@
                 <input type="text" name="description" placeholder="Description" value="<%= errors[i].description %>" required>
                 <input type="text" name="solution" placeholder="Solution" value="<%= errors[i].solution %>" required>
                 <input type="text" name="tda" placeholder="TDA" value="<%= errors[i].tda %>" required>
+                <form action="/submit_url" method="post">
+                    <label for="category">Category:</label><br>
+                    <select id="category" name="category" required>
+                        <option value="">Choisit la Catégorie</option>
+                        <% options.forEach(function(option) { %>
+                            <option value="<%= option.value %>" <%= option.selected ? 'selected' : '' %>><%= option.text %></option>
+                        <% }) %>
+                    </select><br>
+                    <input type="submit" value="Submit">
+                </form>
+                
                 <!-- Bouton pour soumettre le formulaire -->
                 <button type="submit">Valider les modifications</button>
             </form>
