--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,9 +24,8 @@
     <!-- Champ pour choisir une catégorie -->
     <select name="category" required>
         <option value="" disabled selected>Choisir une catégorie</option>
-        <option value="cat1">Catégorie 1</option>
-        <option value="cat2">Catégorie 2</option>
-        <option value="cat3">Catégorie 3</option>
+        <option value="Inot">Inot</option>
+        <option value="Micen4">Micen4</option>
         <!-- ajoutez d'autres catégories ici -->
     </select>
 
@@ -42,6 +41,7 @@
         <p><%= errors[i].description %></p>
         <p><%= errors[i].solution %></p>
         <p><%= errors[i].tda %></p>
+        <p>Catégorie: <%= errors[i].category %></p>
         <!-- Conteneur pour les boutons de modification et de suppression de chaque erreur -->
         <div class="button-container">
             <!-- Formulaire pour modifier une erreur existante -->
@@ -52,6 +52,12 @@
                 <input type="text" name="description" placeholder="Description" value="<%= errors[i].description %>" required>
                 <input type="text" name="solution" placeholder="Solution" value="<%= errors[i].solution %>" required>
                 <input type="text" name="tda" placeholder="TDA" value="<%= errors[i].tda %>" required>
+                <select name="category" required>
+                    <option value="" disabled selected>Sélectionnez une catégorie</option>
+                    <option value="Inot" <%= errors[i].category == 'Inot' ? 'selected' : '' %>>Inot</option>
+                    <option value="Micen4" <%= errors[i].category == 'Micen4' ? 'selected' : '' %>>Micen4</option>
+                    <!-- Ajoutez d'autres catégories si nécessaire -->
+                </select>
                 
                 <!-- Bouton pour soumettre le formulaire -->
                 <button type="submit">Valider les modifications</button>
