--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,6 +43,10 @@
     </select>
 </form>
 
+<% if (typeof category !== 'undefined' && category) { %>
+    <a href="/filter" class="btn">Supprimer le filtre</a>
+<% } %>
+
 <!-- Boucle pour afficher chaque erreur de la liste des erreurs -->
 <% for(let i=0; i<errors.length; i++) { %>
     <div>
