--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,68 +1,78 @@
+/* Global Styles */
 body {
     font-family: Arial, sans-serif;
     padding: 0 10%;
-    background-color: #f9f9f9;
-    backdrop-filter: blur(10px);
+    background-image: linear-gradient(45deg, #f9f9f9, #e8e8e8);
+    color: #333;
 }
 
+/* Glassmorphism Style */
+.glass {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+/* Main Heading Style */
 h1 {
-    color: #333;
+    color: #FF6136;
     text-align: center;
     margin-bottom: 30px;
 }
 
+/* Sub Heading Style */
 h2 {
-    color: #FFA500;  /* Orange */
+    color: #FF6136;
+    margin-top: 20px;
 }
 
-p {
-    color: #555;
-}
-
-form, div {
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 20px;
+/* Form and Div Styles */
+form, div:not(.button-container) {
     margin-bottom: 20px;
-    border-radius: 15px;
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
+    transition: background 0.3s ease;
 }
 
-input[type="text"] {
+form.glass:hover, div.glass:hover {
+    background: rgba(255, 97, 54, 0.1);
+}
+
+/* Input Styles */
+input[type="text"], select {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 97, 54, 0.5);
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
-    transition: border-color 0.3s, box-shadow 0.3s;
+    color: #333;
 }
 
-input[type="text"]:focus {
-    border-color: #FFA500;  /* Orange */
-    box-shadow: 0px 0px 5px #FFA500;  /* Orange */
-}
-
+/* Button Styles */
 button {
     padding: 10px 20px;
-    background-color: rgba(255, 165, 0, 0.7);  /* Orange transparent */
+    background-color: #FF6136;
     color: #fff;
     border: none;
-    border-radius: 15px;
+    border-radius: 10px;
     cursor: pointer;
-    margin-right: 10px;
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -1px rgba(0, 0, 0, 0.06);
-    transition: background-color 0.3s;
+    transition: background 0.3s ease;
 }
 
 button:hover {
-    background-color: rgba(255, 140, 0, 0.8);  /* Orange foncé transparent */
+    background-color: #e05530;
 }
 
+/* Button Container */
 .button-container {
     display: flex;
     justify-content: start;
     gap: 10px;
+}
+
+/* Paragraph Styles */
+p {
+    color: #555;
 }
