--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,7 @@ input[type="text"], select {
 ----------------- */
 
 .error-box {
+    margin-top: 50px;
     margin-bottom: 20px;
     padding: 20px;
     background: rgba(255, 255, 255, 0.1);
