--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,11 +17,18 @@ h1 {
 
 h2 {
     color: #1f1f1f;
+    padding: 5px 10px;
+    margin-bottom: 15px;
+    background-color: rgba(245, 245, 245, 0.9); /* Couleur de fond légèrement différente */
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  /* Ombre douce */
 }
 
 p {
     color: #555;
     margin-bottom: 10px;
+    padding: 5px;
+    border-bottom: 2px solid rgba(0,0,0,0.05); /* Bordure subtile en bas */
 }
 
 button, select {
@@ -72,6 +79,11 @@ input[type="text"], select {
 
 .error-box:hover {
     transform: translateY(-5px);
+}
+
+.error-box h2, .error-box p {
+    margin-left: 10px;  /* Ajoute un léger décalage pour une meilleure hiérarchie visuelle */
+    margin-right: 10px;
 }
 
 /* -----------------
