--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 <h1>LogM - Erreurs</h1>
 
 <!-- Formulaire pour ajouter une nouvelle erreur -->
-<form action="/add-error" method="post">
+<form action="/add-error" method="post" class="form-box">
     <h2>Ajouter une Erreur</h2>
     <!-- Les inputs cachés permettent de transmettre des données sans afficher un champ de saisie à l'utilisateur -->
     <input type="hidden" name="id" value="<%= nextErrorId %>">
