--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,12 @@ body {
 h1 {
     color: #1f1f1f; /* Noir doux pour le texte */
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px; /* Espacement accru en dessous pour aérer */
+    font-size: 2.5em; /* Taille de police augmentée */
+    letter-spacing: 1px; /* Espacement des lettres */
+    padding-bottom: 10px; /* Espacement avant la bordure */
+    border-bottom: 2px solid #e1e1e1; /* Bordure subtile en dessous */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); /* Ombre de texte douce */
 }
 
 h2 {
